--- a/project-management/client/index.html
+++ b/project-management/client/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>React App</title>
+    <!-- <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script> -->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
